--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ __pytestcache__/
 
 # Distribution / packaging
 .DS_Store
-Controller/.DS_Store
-Controller/atomfeeds/.DS_Store
+controller/.DS_Store
+controller/atomfeeds/.DS_Store
 .Python
 build/
 develop-eggs/
