--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,6 @@ pip-log.txt
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-htmlcov/
 .tox/
 .nox/
 .coverage
@@ -52,6 +51,7 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
+Coverage Report/
 
 # Translations
 *.mo
