--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,40 @@
-feedparser
+appdirs==1.4.3
 attrs==19.3.0
+beautifulsoup4==4.9.0
+certifi==2020.4.5.1
+chardet==3.0.4
+colorama==0.4.1
+coverage==5.0.4
+distlib==0.3.0
+entrypoints==0.3
+feedparser==5.2.1
+filelock==3.0.12
+flake8==3.7.9
+flake8-polyfill==1.0.2
+future==0.18.2
+idna==2.9
 importlib-metadata==1.5.0
+lxml==4.5.0
+mando==0.6.4
+mccabe==0.6.1
+mock==4.0.2
 more-itertools==8.2.0
 packaging==20.1
 pluggy==0.13.1
 py==1.8.1
+pycodestyle==2.5.0
+pyflakes==2.1.1
 pyparsing==2.4.6
+PySimpleGUI==4.16.0
 pytest==5.3.5
+python-coveralls==2.9.3
+PyYAML==5.3.1
+radon==4.1.0
+requests==2.23.0
 six==1.14.0
+soupsieve==2.0
+urllib3==1.25.8
+virtualenv==20.0.15
 wcwidth==0.1.8
+xenon==0.7.0
 zipp==3.0.0
