--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ install:
 
 # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
 script:
-  - pytest
+  - unittest
   - sonar-scanner
