--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,6 @@ install:
 
 # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
 script:
-  - python3 -m unittest discover tests/
+  - coverage run -m unittest
+  - coverage report
   - sonar-scanner
