removed unused code and modules

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
 # command to install coverage
 before_install:
   - pip install coverage
+  - export DISPLAY=:0.0
 
 # command to install dependencies
 install:
