--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
   - "3.7"
   - "3.8"
 
+os: windows
+
 addons:
   sonarcloud:
     organization: "int-thumbwar-1-2-3-4"
@@ -13,9 +15,6 @@ addons:
 # command to install coverage
 before_install:
   - pip install coverage
-  - sudo apt-get update
-  - sudo apt-get install lxde
-  - export DISPLAY=:0
 
 # command to install dependencies
 install:
@@ -23,6 +22,6 @@ install:
 
 # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
 script:
-  - coverage run -m unittest
-  - coverage report
+#  - coverage run -m unittest
+#  - coverage report
   - sonar-scanner
