--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,13 @@ before_install:
 install:
   - pip install -r requirements.txt
 
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+
 # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
 script:
-  - xvfb-run --server-args="-screen 0 1024x768x24" make test
   - coverage run -m unittest
   - coverage report
   - sonar-scanner
