--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,7 @@ install:
   - pip install -r requirements.txt
 
 before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
+  - export DISPLAY=:99.0
   - sleep 3 # give xvfb some time to start
 
 # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
