--- a/.travis.yml
+++ b/.travis.yml
@@ -31,9 +31,7 @@ before_script:
 
 # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
 script:
-  - radon cc --average --show-complexity --order SCORE Python-Rss-ticker/controller/
-  - radon cc --average --show-complexity --order SCORE Python-Rss-ticker/model/
-  - radon cc --average --show-complexity --order SCORE Python-Rss-ticker/view/
+  - radon cc --average --show-complexity --order SCORE Python-Rss-ticker/
   - coverage run -m unittest
   - coverage report
   - sonar-scanner
