--- a/view/gui_settings.yaml
+++ b/view/gui_settings.yaml
@@ -1,4 +1,4 @@
 # Background color, font color, and font size and style.
-bg: 'white'
-fg: 'black'
-font: 'times 12'
+bg: white
+fg: black
+font: times 12
